--- a/prepros.config
+++ b/prepros.config
@@ -878,6 +878,17 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "java/dom/slider/slide.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          }
+        }
+      }
+    ]
   }
 }
