--- a/prepros.config
+++ b/prepros.config
@@ -878,17 +878,6 @@
         }
       }
     },
-    "files": [
-      {
-        "file": "java/dom/slider/slide.js",
-        "config": {
-          "tasks": {
-            "minify-js": {
-              "enable": false
-            }
-          }
-        }
-      }
-    ]
+    "files": []
   }
 }
